--- a/Sitio-web/styles.css
+++ b/Sitio-web/styles.css
@@ -1,3 +1,10 @@
 .title {
     color: green;
 }
+
+.parisienne-regular {
+  font-family: "Parisienne", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
